Add satellites expand/collapse function

--- a/MVCoin/MVCoin.csproj
+++ b/MVCoin/MVCoin.csproj
@@ -46,19 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Animation.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Animation.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormControl.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="FormControl.cs" />
     <Compile Include="geometryProperty.cs" />
+    <Compile Include="MathF.cs" />
     <Compile Include="PerPixelAlphaForm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
